# easyapi

./: .gitignore  BufferedPrint.cpp  BufferedPrint.hpp  CMakeLists.txt  Function.hpp  HttpCall.cpp  HttpCall.hpp  LICENSE  ParseArguments.cpp  ParseArguments.hpp  README.md  SimpleFunctionEvaluation.cpp  SimpleFunctionEvaluation.hpp  easyapi.cpp  easyapi_util.cpp  easyapi_util.hpp
eval_func/: CMakeLists.txt  eval_func.h  eval_func.hpp  func.l  func.tab.c  func.tab.h  func.y  func_util.c  func_util.h  lex.yy.c  tests.cpp
parse_func/: func.tab.c  func.y  func_util.c  func_util.h  parse_func.h  tests.cpp
